[package]
name = "xdp-tutorial-rs"
description = "XDP tutorial in Rust using Aya bindings."
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
version = "0.0.1"
edition = "2021"
include = ["src/**/*.rs", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-scaffold = { git = "https://github.com/gabhijit/cargo-scaffold" , tag= "param-hooks"}
#cargo-scaffold = { path = "../cargo-scaffold" }
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "cargo-xdp-tutorial"
path = "src/main.rs"
