[package]
name = "{{tutorial_name}}-runner"
version = "0.1.0"
edition = "2021"
description = "A Userspace program to run the {{tutorial_name}} tutorial from the command line."

[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
{{tutorial_name}}-common = { path = "../common", features = ["user"]}
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["time", "macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "{{tutorial_name}}-runner"
path = "src/xdp-runner.rs"

